2014-08-11  Eduardo Lima Mitev  <elima@igalia.com>

        [GTK] Fix debug build after r172389.

        Rubber-stamped by Philippe Normand.

        * crypto/gtk/CryptoKeyRSAGtk.cpp:
        (WebCore::CryptoKeyRSA::exportData): Remove spurious ASSERT from
        stub. It will be added back along with the real implementation of
        the method.

2014-08-11  Zan Dobersek  <zdobersek@igalia.com>

        Unreviewed fix after r172348.

        * platform/graphics/cairo/BitmapImageCairo.cpp:
        (WebCore::BitmapImage::BitmapImage): Initialize m_minimumSubsamplingLevel to 0.

2014-08-11  Eduardo Lima Mitev  <elima@igalia.com>

        [GTK] Adds stubs for all subtle crypto algorithm implemntations
        https://bugs.webkit.org/show_bug.cgi?id=133316

        Reviewed by Philippe Normand.

        No new tests since no new functionality has been added.

        * CMakeLists.txt: Add subtle crypto 'algorithms' and 'parameters' dirs to WebCore incuded dirs
        * PlatformGTK.cmake:  Add subtle crypto sources to WebCore target
        * crypto/gtk/CryptoAlgorithmAES_CBCGtk.cpp: Added.
        (WebCore::CryptoAlgorithmAES_CBC::platformEncrypt):
        (WebCore::CryptoAlgorithmAES_CBC::platformDecrypt):
        * crypto/gtk/CryptoAlgorithmAES_KWGtk.cpp: Added.
        (WebCore::CryptoAlgorithmAES_KW::platformEncrypt):
        (WebCore::CryptoAlgorithmAES_KW::platformDecrypt):
        * crypto/gtk/CryptoAlgorithmHMACGtk.cpp: Added.
        (WebCore::CryptoAlgorithmHMAC::platformSign):
        (WebCore::CryptoAlgorithmHMAC::platformVerify):
        * crypto/gtk/CryptoAlgorithmRSAES_PKCS1_v1_5Gtk.cpp: Added.
        (WebCore::CryptoAlgorithmRSAES_PKCS1_v1_5::platformEncrypt):
        (WebCore::CryptoAlgorithmRSAES_PKCS1_v1_5::platformDecrypt):
        * crypto/gtk/CryptoAlgorithmRSASSA_PKCS1_v1_5Gtk.cpp: Added.
        (WebCore::CryptoAlgorithmRSASSA_PKCS1_v1_5::platformSign):
        (WebCore::CryptoAlgorithmRSASSA_PKCS1_v1_5::platformVerify):